# fighters-codex

./: .gitattributes  .gitignore  BEXTRA01.M  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  mkdocs.yml  requirements-docs.txt  version.h.in
.github/: dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  epic.yml  feature_request.yml  re_task.yml
.github/codeql/: codeql-config.yml
.github/workflows/: auto-close-epics.yml  ci.yml  codeql.yml  docs.yml  fuzz-deep.yml  labels.yml  release.yml
cli/: CMakeLists.txt  cmd_ai.cpp  cmd_audio.cpp  cmd_bi.cpp  cmd_bin.cpp  cmd_cam.cpp  cmd_cb8.cpp  cmd_cfg.cpp  cmd_dat.cpp  cmd_dlg.cpp  cmd_effect.cpp  cmd_esa.cpp  cmd_fbc.cpp  cmd_fnt.cpp  cmd_hgr.cpp  cmd_hud.cpp  cmd_inf.cpp  cmd_install.cpp  cmd_lay.cpp  cmd_lib.cpp  cmd_mc.cpp  cmd_mission.cpp  cmd_mnu.cpp  cmd_mt.cpp  cmd_mus.cpp  cmd_ot.cpp  cmd_pal.cpp  cmd_patch.cpp  cmd_pic.cpp  cmd_plt.cpp  cmd_pts.cpp  cmd_raw.cpp  cmd_rgn.cpp  cmd_seq.cpp  cmd_sh.cpp  cmd_sms.cpp  cmd_ssf.cpp  cmd_t2.cpp  cmd_txt.cpp  cmd_vdo.cpp  (+2 more)
cmake/: win-utf8.manifest
db/: README.md  coverage-baseline.csv  reproducibility-audit.md  subsystems.csv
db/inventory/: functions.csv  globals.csv  ranges.csv
db/symbols/: ai.csv  airports.csv  campaign.csv  chat.csv  cockpit-sensors.csv  collision.csv  comms-dl.csv  comms-hf.csv  comms-sc.csv  comms-xf.csv  core-math.csv  flight-model.csv  hud.csv  input.csv  ip.csv  memory-resource.csv  msapi.csv  network.csv  objects.csv  radio.csv  render-core.csv  renderer.csv  seq.csv  shell-ui.csv  sound.csv  startup.csv  terrain.csv  video.csv  (+4 more)
docs/: ARCHITECTURE.md  CNAME  README.md  TODO.md  api.md  cli.md  development.md  gui.md  modding.md  roadmap.md  spec-authoring.md
fuzz/: CMakeLists.txt  README.md  fuzz_ai.cpp  fuzz_audio.cpp  fuzz_audio.dict  fuzz_bi.cpp  fuzz_bin.cpp  fuzz_blast.cpp  fuzz_brf.cpp  fuzz_cam.cpp  fuzz_cb8.cpp  fuzz_cb8.dict  fuzz_cfg.cpp  fuzz_dat.cpp  fuzz_dlg.cpp  fuzz_ealib.cpp  fuzz_ealib.dict  fuzz_effect.cpp  fuzz_esa.cpp  fuzz_esa.dict  fuzz_fbc.cpp  fuzz_fnt.cpp  fuzz_fnt.dict  fuzz_hgr.cpp  fuzz_hud.cpp  fuzz_inf.cpp  fuzz_install.cpp  fuzz_install.dict  fuzz_lay.cpp  fuzz_mc.cpp  fuzz_mission.cpp  fuzz_mnu.cpp  fuzz_mt.cpp  fuzz_mus.cpp  fuzz_pal.cpp  fuzz_pe.cpp  fuzz_pe.dict  fuzz_pic.cpp  fuzz_plt.cpp  fuzz_pts.cpp  (+12 more)
fxe/: CMakeLists.txt  README.md  compile_check.cpp
gui/: CMakeLists.txt
gui/src/: app.cpp  app.h  asset_index.cpp  asset_index.h  main.cpp  palettes.cpp  palettes.h  thumbnails.cpp  thumbnails.h  util.h  workspace.cpp  workspace.h
gui/src/assets/: icons_baked.cpp  icons_baked.h
gui/src/editors/: ai_editor.cpp  ai_editor.h  audio_editor.cpp  bin_editor.cpp  bin_editor.h  brf_editor.cpp  cam_editor.cpp  cam_editor.h  cb8_editor.cpp  cb8_editor.h  fnt_editor.cpp  fnt_editor.h  hud_editor.cpp  hud_editor.h  inf_editor.cpp  lay_editor.cpp  lay_editor.h  mission_editor.cpp  mus_editor.cpp  mus_editor.h  overlay_preview.cpp  overlay_preview.h  pal_editor.cpp  pal_editor.h  pic_editor.cpp  plt_editor.cpp  raw_viewer.cpp  seq_editor.cpp  sh_editor.cpp  sh_editor.h  sh_scene.cpp  sh_scene.h  terrain_preview.cpp  terrain_preview.h  txt_editor.cpp  txt_editor.h  vdo_editor.cpp  vdo_editor.h  xmi_editor.cpp  xmi_editor.h
gui/src/panels/: category_browser.cpp  category_browser.h  editor_host.cpp  lib_browser.cpp  preview.cpp  preview.h
gui/src/platform/: audio_player.cpp  audio_player.h  dialog_queue.cpp  dialog_queue.h  dialogs.cpp  dialogs.h  fonts.cpp  fonts.h  gl.cpp  math3d.h  texture.cpp  texture.h  theme.cpp  theme.h  window.cpp  window.h
gui/src/ui/: icons.cpp  icons.h
lib/: CMakeLists.txt
lib/include/ft/: ot.h  plt.h  raw.h
lib/include/fx/: ai.h  audio.h  bi.h  bin.h  blast.h  brf.h  cam.h  cb8.h  cfg.h  dat.h  dlg.h  ealib.h  effect.h  esa.h  fbc.h  fnt.h  hgr.h  hud.h  inf.h  install.h  lay.h  mc.h  mission.h  mnu.h  mt.h  mus.h  ot.h  pal.h  pe.h  pic.h  plt.h  pts.h  raw.h  rgn.h  rtpatch.h  seq.h  sh.h  sms.h  ssf.h  t2.h  (+3 more)
lib/src/: ai.cpp  audio.cpp  bi.cpp  bin.cpp  blast.cpp  brf.cpp  cam.cpp  cb8.cpp  cfg.cpp  dat.cpp  dlg.cpp  ealib.cpp  effect.cpp  esa.cpp  fbc.cpp  fnt.cpp  hgr.cpp  hud.cpp  inf.cpp  install.cpp  lay.cpp  mc.cpp  mission.cpp  mnu.cpp  mt.cpp  mus.cpp  ot.cpp  pal.cpp  pe.cpp  pic.cpp  plt.cpp  pts.cpp  raw.cpp  rgn.cpp  rtpatch.cpp  seq.cpp  sh.cpp  sms.cpp  ssf.cpp  t2.cpp  (+3 more)
render/: CMakeLists.txt  README.md
render/include/fx_render/: fa.h  fa_backend.h  gl.h  render.h
render/src/: fa.cpp  fa_backend.cpp  gl_backend.cpp  render.cpp  software.cpp
scripts/: README.md  draft-changelog.ps1  draft-changelog.py  extract-changelog.py  release.ps1  release.py
tests/: CMakeLists.txt  test_ai.cpp  test_audio.cpp  test_bi.cpp  test_bin.cpp  test_blast.cpp  test_brf.cpp  test_cam.cpp  test_cb8.cpp  test_cfg.cpp  test_dat.cpp  test_dlg.cpp  test_ealib.cpp  test_effect.cpp  test_esa.cpp  test_fbc.cpp  test_fnt.cpp  test_hgr.cpp  test_hud.cpp  test_inf.cpp  test_install.cpp  test_lay.cpp  test_mc.cpp  test_mission.cpp  test_mnu.cpp  test_mt.cpp  test_mus.cpp  test_ot.cpp  test_overlays.cpp  test_pal.cpp  test_pe.cpp  test_pic.cpp  test_plt.cpp  test_pts.cpp  test_raw.cpp  test_rgn.cpp  test_rtpatch.cpp  test_seq.cpp  test_sh.cpp  test_sms.cpp  (+5 more)
tests/cli/: run_cli_test.cmake  run_install_test.cmake
tests/embed/: CMakeLists.txt  consumer.cpp  run_embed_test.cmake
tests/fixtures/: README.md
tests/gui/: test_asset_index.cpp  test_audio_player.cpp  test_dialog_queue.cpp  test_icons.cpp  test_math3d.cpp  test_overlay_preview.cpp  test_terrain_preview.cpp  test_thumbnails.cpp  test_util.cpp  test_workspace.cpp
tests/integration/: fa-esa.sha256  fa-extract.sha256  fa-patch.sha256  fa_disc.py  fa_manifest.py  fa_patch.py  fa_repack.py
tests/render/: test_fa.cpp  test_render.cpp
tests/support/: fixture.h  le_image.h
tools/: CMakeLists.txt  check_status.py  dll_info.cpp  fa_demangle.py  gen_fxe.py  gen_icons.py  gen_signatures.py  recover_frames.py  recover_globals.py  recover_signatures.py
(+285 files in other folders)
